bad/bin_op_or_null_class.example_compiler_output
ERROR
[1mbad/bin_op_or_null_class.lat:5:7: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `null` and `Y`[m
	null || new Y;
	     [1;32m^[m
